@@ -6,6 +6,13 @@ Pending changes in the mainline
 * The GDCM decoder replaces the built-in Orthanc decoder
 
 
+TODO : Remove any dependency on GDCM in "Plugin"
+TODO : Use "/series/ordered-slices"
+TODO : Support cine and multi-frame images
+TODO : Remove class "ParsedDicomFile"
+TODO : Interpolation does not work at least with Firefox
+
+
 Version 1.3 (2015-11-27)
 ========================
 
